--- a/examples/efficientcube.ipynb
+++ b/examples/efficientcube.ipynb
@@ -1633,8 +1633,8 @@
     "Here, note that even though the compute-optimal large model is very accurate in terms of predicting optimal moves, it is practically very slow at expanding nodes with repetitive forward computations.\n",
     "Which means, depending on devices, a smaller model trained with more data might be better off in terms of the accuracy-latency trade-off.\n",
     "\n",
-    "That's also where `chinchilla` might be useful\n",
-    "-- See [another notebook](https://github.com/kyo-takano/chinchilla/tree/master/examples/nn-for-search.ipynb) about ***training a compute-optimal model for search***,"
+    "<!-- That's also where `chinchilla` might be useful\n",
+    "-- See [another notebook](https://github.com/kyo-takano/chinchilla/tree/master/examples/nn-for-search.ipynb) about ***training a compute-optimal model for search***, -->"
    ]
   }
  ],
@@ -1646,21 +1646,6 @@
    "provenance": [],
    "toc_visible": true
   },
-  "kaggle": {
-   "accelerator": "none",
-   "dataSources": [
-    {
-     "databundleVersionId": 7339171,
-     "sourceId": 65704,
-     "sourceType": "competition"
-    }
-   ],
-   "dockerImageVersionId": 30626,
-   "isGpuEnabled": false,
-   "isInternetEnabled": true,
-   "language": "python",
-   "sourceType": "notebook"
-  },
   "kernelspec": {
    "display_name": "Python 3",
    "name": "python3"
@@ -1668,7 +1653,7 @@
   "language_info": {
    "name": "python"
   },
-  "name": "getting_started.ipynb",
+  "name": "efficientcube.ipynb",
   "papermill": {
    "default_parameters": {},
    "duration": 10.734565,
