--- a/examples/efficientcube.ipynb
+++ b/examples/efficientcube.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "---\n",
     "\n",
-    "# **Training Compute-Optimal Rubik's Cube Solvers**\n",
+    "# **Scaling Rubik's Cube Solvers from Scratch**\n",
     "\n",
     "`chinchilla` is a library that helps **find the optimal allocation of compute between model size** and **training data to maximize performance under a budget**.\n",
     "\n",
@@ -212,25 +212,18 @@
     "\n",
     "\n",
     "class Net(nn.Module):\n",
-    "    def __init__(\n",
-    "        self, hidden_size=4096, num_hidden_layers=8, input_dim=324, output_dim=18\n",
-    "    ):\n",
+    "    def __init__(self, hidden_size=4096, num_hidden_layers=8, input_dim=324, output_dim=18):\n",
     "        super(Net, self).__init__()\n",
     "        self.embedding = nn.Linear(input_dim, hidden_size, bias=False)\n",
     "        self.layers = nn.ModuleList(\n",
-    "            [\n",
-    "                LinearBlock(hidden_size, hidden_size, bias=True)\n",
-    "                for i in range(num_hidden_layers)\n",
-    "            ]\n",
+    "            [LinearBlock(hidden_size, hidden_size, bias=True) for i in range(num_hidden_layers)]\n",
     "        )\n",
     "        self.head = nn.Linear(hidden_size, output_dim, bias=False)\n",
     "        self.reset_parameters()\n",
     "\n",
     "    def reset_parameters(self):\n",
     "        \"\"\"Basic initialization\"\"\"\n",
-    "        nn.init.normal_(\n",
-    "            self.embedding.weight, std=np.sqrt(1 / 54)\n",
-    "        )  # There'll be 54 ones in a sample\n",
+    "        nn.init.normal_(self.embedding.weight, std=np.sqrt(1 / 54))  # There'll be 54 ones in a sample\n",
     "        for layer in self.layers:\n",
     "            nn.init.kaiming_normal_(layer.fc.weight)\n",
     "            nn.init.zeros_(layer.fc.bias)\n",
@@ -312,9 +305,7 @@
     "# 2.\n",
     "model_search_config = dict(\n",
     "    size_estimator=estimate_model_size,\n",
-    "    hyperparam_grid=dict(\n",
-    "        hidden_size=list(range(64, 65536 + 1, 64)), num_hidden_layers=list(range(1, 64))\n",
-    "    ),\n",
+    "    hyperparam_grid=dict(hidden_size=list(range(64, 65536 + 1, 64)), num_hidden_layers=list(range(1, 64))),\n",
     ")"
    ]
   },
@@ -576,9 +567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ctx = torch.cuda.amp.autocast(\n",
-    "    dtype=torch.bfloat16 if torch.cuda.is_bf16_supported() else torch.float16\n",
-    ")\n",
+    "ctx = torch.cuda.amp.autocast(dtype=torch.bfloat16 if torch.cuda.is_bf16_supported() else torch.float16)\n",
     "loss_fn = nn.CrossEntropyLoss()\n",
     "\n",
     "\n",
@@ -1633,8 +1622,8 @@
     "Here, note that even though the compute-optimal large model is very accurate in terms of predicting optimal moves, it is practically very slow at expanding nodes with repetitive forward computations.\n",
     "Which means, depending on devices, a smaller model trained with more data might be better off in terms of the accuracy-latency trade-off.\n",
     "\n",
-    "That's also where `chinchilla` might be useful\n",
-    "-- See [another notebook](https://github.com/kyo-takano/chinchilla/tree/master/examples/nn-for-search.ipynb) about ***training a compute-optimal model for search***,"
+    "<!-- That's also where `chinchilla` might be useful\n",
+    "-- See [another notebook](https://github.com/kyo-takano/chinchilla/tree/master/examples/nn-for-search.ipynb) about ***training a compute-optimal model for search***, -->"
    ]
   }
  ],
@@ -1646,21 +1635,6 @@
    "provenance": [],
    "toc_visible": true
   },
-  "kaggle": {
-   "accelerator": "none",
-   "dataSources": [
-    {
-     "databundleVersionId": 7339171,
-     "sourceId": 65704,
-     "sourceType": "competition"
-    }
-   ],
-   "dockerImageVersionId": 30626,
-   "isGpuEnabled": false,
-   "isInternetEnabled": true,
-   "language": "python",
-   "sourceType": "notebook"
-  },
   "kernelspec": {
    "display_name": "Python 3",
    "name": "python3"
@@ -1668,7 +1642,7 @@
   "language_info": {
    "name": "python"
   },
-  "name": "getting_started.ipynb",
+  "name": "efficientcube.ipynb",
   "papermill": {
    "default_parameters": {},
    "duration": 10.734565,
