[minor] Fix minor presentation & utility issues

--- a/examples/llm/main.ipynb
+++ b/examples/llm/main.ipynb
@@ -6,6 +6,9 @@
     "id": "XT3xW5kr3dT2"
    },
    "source": [
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kyo-takano/chinchilla/blob/master/examples/llm/main.ipynb)\n",
+    "[![GitHub Repository](https://img.shields.io/badge/-chinchilla-2dba4e?logo=github)](https://github.com/kyo-takano/chinchilla)\n",
+    "\n",
     "# Allocating $10^{24}$ FLOPs to a single LLM\n",
     "\n",
     "This notebook guides you through **estimating the scaling law for LLMs** (with `vocab_size=32000`) using a subset of Chinchilla training runs (filter: $10^{18} < C \\wedge N < D$).\n",
@@ -16,6 +19,17 @@
     "- The transition of model-parameter ratio\n",
     "- The trajectory of minimum loss possible for a given compute\n",
     "- How the \"20 tokens per parameter\" heuristic compares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Uncomment these lines if not cloning\"\"\"\n",
+    "# %pip install -U chinchilla\n",
+    "# !wget -nc https://github.com/kyo-takano/chinchilla/raw/refs/heads/preview/examples/llm/df.csv"
    ]
   },
   {
